hero alignment fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,8 +26,10 @@ section{
   position: relative;
 }
 
+
+
 @media (max-width: 768px) {
-  html {
-    zoom: 0.80;
+  body {
+    min-width: 1200px;
   }
 }
